# fmdl

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs
src/modules/: mod.rs
src/modules/lastfm/: mod.rs  top.rs
src/modules/rich/: apply.rs  get.rs  mod.rs  read.rs
src/modules/youtube/: dl.rs  mod.rs  search.rs
