[package]
name = "fmdl"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
thiserror = "2.0"
id3 = "1.16"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] } 
